--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dropzone": "^14.3.5",
     "react-loading-skeleton": "^3.5.0",
     "react-pdf": "^9.1.1",
+    "react-resize-detector": "^12.0.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
